  disable these checks.

* cogent.draw.distribution_plots now uses matplotlib proxy Artists for legend
  creation (this simplifies the code a bit). Added ability to set the size of
  plot figures through two new optional parameters to generate_box_plots and
  generate_comparative_plots. More robust checks have been put in place in
  case making room for labels fails.

Bug Fixes
---------

* improve handling of reading frames from Ensembl
* actually included the test_ensembl/test_metazoa.py file that was
  accidentally overlooked.
* fixed small diff in postcript output from RNAfold

Cogent 1.5 - 1.5.1
==================

New Features
------------

* Alignments can now add sequences that are pairwise aligned to a sequence
  already present in the alignment.
* Alignment.addSeqs has more flexibility with the specific order of sequences
  now controllable by the user. Thanks to Jan Kosinski for these two very
  useful patches!
* Increased options for reading Table data from files: limit keyword; and,
  line based (as distinct from column-based) type-casting of delimited files.
* Flexible parser for raw Greengenes 16S records
* Add fast pairwise distance estimation for DNA/RNA sequences. Currently only
  Jukes-Cantor 1969 and Tamura-Nei 1993 distances are provided. A cookbook
  entry was added to building_phylogenies.
* Added a PredefinedNucleotide substitution model class. This class uses
  Cython implementations for nucleotide models where analytical solutions
  are available. Substantial speedups are achieved. These implementations
  do not support obtaining the rate matrix. Use the older style implementation
  if you require that (toggled by the rate_matrix_required argument).
* Added fit_function function. This allows to fit any model to a x and y 
  dataset using simplex to reduce the error between the model and the data.
* Added parsers for bowtie and for BLAT's PSL format
* Table can now read/write gzipped files.